@@ -963,6 +963,7 @@ class TMCG_OpenPGP_Keyring
 {
 	private:
 		std::map<std::string, const TMCG_OpenPGP_Pubkey*>	keys;
+		std::map<std::string, const TMCG_OpenPGP_Pubkey*>	keys_by_keyid;
 
 	public:
 		TMCG_OpenPGP_Keyring
@@ -971,6 +972,8 @@ class TMCG_OpenPGP_Keyring
 			(const TMCG_OpenPGP_Pubkey*						key);
 		const TMCG_OpenPGP_Pubkey* find
 			(const std::string								&fingerprint) const;
+		const TMCG_OpenPGP_Pubkey* find_by_keyid
+			(const std::string								&keyid) const;
 		size_t size
 			() const;
 		~TMCG_OpenPGP_Keyring
@@ -1262,6 +1265,9 @@ class CallasDonnerhackeFinneyShawThayerRFC4880
 		static void KeyidCompute
 			(const tmcg_openpgp_octets_t					&in,
 			 tmcg_openpgp_octets_t							&out);
+		static void KeyidConvert
+			(const tmcg_openpgp_octets_t					&in,
+			 std::string									&out);
 		static void KeyidCompute
 			(const tmcg_openpgp_octets_t					&in,
 			 std::string									&out);
